--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "Aula 09",
         "Aula 07",
         "Aula 06",
-        "Aula 09"
+        "Aula 11"
     ]
 }
